--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 <td class="pad">
 <h2 style="margin: 0; color: #3f3f3f; direction: ltr; font-family: Arial, Helvetica, sans-serif; font-size: 16px; font-weight: 400; letter-spacing: normal; line-height: 21px; text-align: justify; margin-top: 0; margin-bottom: 0; mso-line-height-alt: 40px;">
 
-Já imaginou um laboratório onde cada móvel une durabilidade, higiene e ergonomia? Na CM Móveis & Cia, desenvolvemos soluções sob medida para ambientes técnicos:
+Já imaginou um laboratório onde cada móvel une durabilidade, higiene e ergonomia?<br>Na CM Móveis & Cia, desenvolvemos soluções sob medida para ambientes técnicos:
 <br>
 <br>
 
